Make necessary changes for new chartkick version

--- a/app/views/trends/index.html.erb
+++ b/app/views/trends/index.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+<%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %>
 <%= form_tag("/trends", method: "get") do %>
   <div id="datepicker" class="input-daterange input-group input-group-sm col-xs-4 col-xs-offset-4">
     <input type="text" class="input-sm form-control" id="datepicker-start"
